--- a/sprint1.html
+++ b/sprint1.html
@@ -102,7 +102,7 @@
     <!-- Button to trigger sort -->
     <button id="btnSort">Sort</button>
 
-
+    <div id="output"></div>
     <!-- Including xlsx library for handling Excel files -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
 
