--- a/sprint1.html
+++ b/sprint1.html
@@ -25,6 +25,18 @@
             display: inline-block;
             margin: 5px;
         }
+
+        /* Highlight the best 10% of cells in green */
+        .best-10-percent {
+            background-color: #00FF00;
+            /* Green */
+        }
+
+        /* Highlight the worst 10% of cells in red */
+        .worst-10-percent {
+            background-color: #FF0000;
+            /* Red */
+        }
     </style>
 </head>
 
@@ -55,7 +67,7 @@
     <pre id="csvData"></pre>
     <!-- Button to trigger data view -->
     <button id="btnView">click here to view the data</button>
-    
+
     <label for="txtPk">Available key to identify an entry</label>
     <textarea name="txtPk" id="txtPk" cols="30" rows="2" disabled="true"></textarea>
     <button id="btnPK">Click here to find primary key</button>
@@ -318,16 +330,30 @@
 
             // Sort the array based on the selected column and order
             sortableArray.sort((a, b) => {
-                const itemA = a[sortIndex];
-                const itemB = b[sortIndex];
-                if (itemA < itemB) {
-                    return sortOrder === "asc" ? -1 : 1;
+                const itemA = parseFloat(a[sortIndex]);
+                const itemB = parseFloat(b[sortIndex]);
+
+                if (isNaN(itemA) && isNaN(itemB)) {
+                    // Both values are not numbers, treat them as equal
+                    return 0;
+                } else if (isNaN(itemA)) {
+                    // itemA is not a number, place it after itemB
+                    return 1;
+                } else if (isNaN(itemB)) {
+                    // itemB is not a number, place it after itemA
+                    return -1;
+                } else {
+                    // Both values are numbers, perform numerical comparison
+                    if (itemA < itemB) {
+                        return sortOrder === "asc" ? -1 : 1;
+                    } else if (itemA > itemB) {
+                        return sortOrder === "asc" ? 1 : -1;
+                    } else {
+                        return 0;
+                    }
                 }
-                if (itemA > itemB) {
-                    return sortOrder === "asc" ? 1 : -1;
-                }
-                return 0;
             });
+
 
             // Reconstruct the original array with the sorted data
             myArray = [header].concat(sortableArray);
@@ -397,7 +423,7 @@
         }
 
         function clearEverything() {
-           
+
             outputDiv.innerHTML = "";
             myArray = [];
             document.getElementById('txtPk').value = " ";
@@ -406,16 +432,91 @@
             document.getElementById('txtPk').value = " ";
 
         }
+
+        function applyColorScaleToColumn(columnIndex, thresholds) {
+            const table = document.querySelector('table');
+            const rows = table.querySelectorAll('tr');
+
+            const cellValues = [];
+
+            for (let i = 1; i < rows.length; i++) {
+                const row = rows[i];
+                const cellValue = parseFloat(row.cells[columnIndex].textContent);
+
+                if (!isNaN(cellValue)) {
+                    cellValues.push({ value: cellValue, row: row.cells[columnIndex] });
+                }
+            }
+
+            // Sort the cell values
+            cellValues.sort((a, b) => a.value - b.value);
+
+            const totalCells = cellValues.length;
+            const best10PercentIndex = Math.floor(totalCells * 0.1);
+            const worst10PercentIndex = Math.floor(totalCells * 0.9);
+
+            for (let i = 0; i < cellValues.length; i++) {
+                const cellData = cellValues[i];
+
+                if (i < best10PercentIndex) {
+                    // Highlight the best 10% of cells
+                    cellData.row.classList.add('best-10-percent');
+                    cellData.row.classList.remove('worst-10-percent');
+                } else if (i >= worst10PercentIndex) {
+                    // Highlight the worst 10% of cells
+                    cellData.row.classList.add('worst-10-percent');
+                    cellData.row.classList.remove('best-10-percent');
+                } else {
+                    // Remove any previous highlighting
+                    cellData.row.classList.remove('best-10-percent', 'worst-10-percent');
+                }
+            }
+        }
+
+        function removeColorScaleFromColumn(columnIndex) {
+            const table = document.querySelector('table');
+            const rows = table.querySelectorAll('tr');
+
+            for (let i = 1; i < rows.length; i++) {
+                const cell = rows[i].cells[columnIndex];
+                cell.classList.remove('best-10-percent', 'worst-10-percent');
+            }
+        }
+
         function hiLow() {
-            document.getElementById("divGoodHiLow").style.display = "block"
-            const headers = myArray[0]
+            document.getElementById("divGoodHiLow").style.display = "block";
+            const headers = myArray[0];
             const highGood = [];
             const highBad = [];
-            for (let i = 0; i < headers.length; i++) {
+
+            // Calculate the threshold values for the best and worst 10% of cells
+            const columnThresholds = {};
+
+            for (let i = 1; i < headers.length; i++) {
+                const columnValues = myArray.slice(1).map(row => parseFloat(row[i]));
+
+                // Sort the column values
+                columnValues.sort((a, b) => a - b);
+
+                // Calculate the threshold indices for the best and worst 10%
+                const totalCells = columnValues.length;
+                const best10PercentIndex = Math.floor(totalCells * 0.1);
+                const worst10PercentIndex = Math.floor(totalCells * 0.9);
+
+                // Get the threshold values
+                const best10PercentThreshold = columnValues[best10PercentIndex];
+                const worst10PercentThreshold = columnValues[worst10PercentIndex];
+
+                // Store the thresholds for this column
+                columnThresholds[i] = {
+                    best: best10PercentThreshold,
+                    worst: worst10PercentThreshold
+                };
+
                 const myDiv = document.getElementById("divCheck");
                 const checkbox = document.createElement('input');
                 const label = document.createElement('label');
-                //dynamically creates the element for the user to select if a High value is good
+
                 checkbox.type = "checkbox";
                 checkbox.name = "chkHighLow";
                 checkbox.value = headers[i];
@@ -423,7 +524,7 @@
 
                 label.htmlFor = `chkId${i}`;
                 label.textContent = headers[i];
-                label.name = 'labelCheck'
+                label.name = 'labelCheck';
 
                 myDiv.appendChild(checkbox);
                 myDiv.appendChild(label);
@@ -442,10 +543,22 @@
                             highGood.splice(indexInHighGood, 1);
                         }
                     }
-                    document.getElementById("taHiLow").value = highGood
+
+                    // Apply the color scale to the cells of this column if it's considered high values good
+                    if (highGood.includes(headers[i])) {
+                        applyColorScaleToColumn(i, columnThresholds[i]);
+                    } else {
+                        removeColorScaleFromColumn(i);
+                    }
+
+                    document.getElementById("taHiLow").value = highGood.join(', ');
                 });
             }
         }
+
+
+
+
 
     </script>
 </body>
