--- a/sprint1.html
+++ b/sprint1.html
@@ -221,7 +221,7 @@
         }
         // Event listener for the "View Data" button
         function btnViewOnclick() { 
-
+            populateSortDropdown(myArray[0]);
             displayDataFromArray(myArray);
         }
 
