--- a/sprint1.html
+++ b/sprint1.html
@@ -26,10 +26,10 @@
             margin: 5px;
         }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
-    <h1>DevGroup 4</h1>
     <!-- Dropdown for selecting the display type -->
     <label for="fileType">Choose File Type:</label>
     <select name="fileType" id="fileTypes">
@@ -53,12 +53,10 @@
     <!-- File input to upload CSV or Excel files -->
     <input type="file" id="inputFile" accept=".csv, .xlsx, .xls">
     <pre id="csvData"></pre>
-    <!-- Textarea for displaying raw JSON data -->
-    <textarea name="" id="taResults" cols="100" rows="10"></textarea>
     <!-- Button to trigger data view -->
     <button id="btnView">click here to view the data</button>
     <!-- Div to display the output -->
-    <div id="output"></div>
+   
     <label for="txtPk">Available key to identify an entry</label>
     <textarea name="txtPk" id="txtPk" cols="30" rows="2" disabled="true"></textarea>
     <button id="btnPK">Click here to find primary key</button>
@@ -78,7 +76,7 @@
     </Form>
     <button id="btnClear" onclick="clearEverything()">Click Here to Clear out the information</button>
     <br>
-    <!--///////////////////////////////////////-->
+   
     <button id="btnHiLo" onclick="hiLow()">Click here to identify what good data is</button>
     <div id="divGoodHiLow" style="display: none;">
         <p>Check the box if a high value is considered good: </p>
@@ -101,6 +99,28 @@
 
     <!-- Button to trigger sort -->
     <button id="btnSort">Sort</button>
+     <div id="divPlot" style="display: none;">
+        <label for="selX">x-axis: </label>
+        <select name="xLabels" id="selX">
+            <option>Choose x-axis </option>
+        </select>
+        <br>
+        <label for="selY">y-axis: </label>
+        <select name="yLabels" id="selY">
+            <option>Choose y-axis </option>
+        </select>
+        <button id="btnGenScatter">Generate Scatter plot</button>
+        <br>
+         <div id="divScatter">
+            <canvas id="scatterPlot"></canvas>
+        </div>
+    </div>
+    <br>
+    <button id="btnPopXandY">Populate dropdowns</button>
+    <br>
+
+    <br>
+    <div id="output"></div>
 
 
     <!-- Including xlsx library for handling Excel files -->
@@ -111,6 +131,10 @@
         document.getElementById("selectedInput").disabled = true;
         // Variable to hold the parsed data from the uploaded file
         let myArray;
+        let xAxisVal
+        let yAxisVal
+        let xValues = [];
+        let yValues = [];
         // Output div where the data will be displayed
         const outputDiv = document.getElementById('output');
         //2D array to store the selected input and output columns
@@ -181,7 +205,6 @@
 
                     populateSortDropdown(myArray[0]);
                     // Update the textarea with the parsed data
-                    document.getElementById('taResults').value = JSON.stringify(myArray, null, 2);
                 };
                 // Read the file accordingly
                 if (file.name.endsWith('.csv')) {
@@ -355,7 +378,11 @@
                 }
             }
 
+
             for (let j of numericColumns) {
+
+
+
                 let column = standardizable.map(row => parseFloat(row[j]));
                 let min = Math.min(...column);
                 let max = Math.max(...column);
@@ -387,21 +414,22 @@
             }
             //standardizable = standardizable.map((row, rowIndex) => row.map((value, colIndex) => colIndex === j ? standardizedValue : value));
 
+
+
             myArray = [header].concat(standardizable);
             document.getElementById("btnView").click();
         }
 
-        //button to remove everything 
         function clearEverything() {
-            document.getElementById("taResults").value = "";
+
             outputDiv.innerHTML = "";
+            myArray = [];
             document.getElementById('txtPk').value = " ";
             document.getElementById("taHiLow").value = " "
             document.getElementById('divCheck').innerHTML = " ";
-            document.getElementById("divGoodHiLow").style.display = "none"
-        }
+            document.getElementById('txtPk').value = " ";
 
-        //high equals good or bad - user input needed
+        }
         function hiLow() {
             document.getElementById("divGoodHiLow").style.display = "block"
             const headers = myArray[0]
@@ -442,7 +470,87 @@
                 });
             }
         }
+        document.getElementById("btnPopXandY").addEventListener('click', function () {
+            document.getElementById('divPlot').style.display = "block"
+            const xAxisSel = document.getElementById("selX");
+            const yAxisSel = document.getElementById("selY");
 
+            // Clear xValues and yValues arrays
+            xValues = [];
+            yValues = [];
+
+            // Assuming myArray is your 2D array
+
+            // Populate dropdowns with attribute names
+            myArray[0].forEach((value, index) => {
+                const newOptX = document.createElement("option");
+                newOptX.value = index;
+                newOptX.text = value;
+                xAxisSel.add(newOptX);
+
+                const newOptY = document.createElement("option");
+                newOptY.value = index;
+                newOptY.text = value;
+                yAxisSel.add(newOptY);
+            });
+        });
+
+        document.getElementById("btnGenScatter").addEventListener('click', function () {
+            document.getElementById('divScatter').style.display = 'block'
+
+            // Get the canvas element and its 2d context
+            const canvas = document.getElementById('scatterPlot');
+            const ctx = canvas.getContext('2d');
+
+            // Destroy the existing Chart instance if it exists
+            if (Chart.instances.length > 0) {
+                Chart.instances[0].destroy();
+            }
+
+            // Extract X and Y values using selected indices
+            const selectedXIndex = document.getElementById("selX").value;
+            const selectedYIndex = document.getElementById("selY").value;
+
+            for (let i = 1; i < myArray.length; i++) {
+                xValues.push(myArray[i][selectedXIndex]);
+                yValues.push(myArray[i][selectedYIndex]);
+            }
+
+            const maxX = Math.max(...xValues);
+            const maxY = Math.max(...yValues);
+            const minX = Math.min(...xValues);
+            const minY = Math.min(...yValues);
+
+            new Chart(ctx, {
+                type: 'scatter',
+                data: {
+                    datasets: [{
+                        label: 'Scatter Plot',
+                        data: xValues.map((x, index) => ({ x, y: yValues[index] })),
+                        backgroundColor: 'blue', 
+                        pointRadius: 4, 
+                    }]
+                },
+                options: {
+                    scales: {
+                        x: {
+                            type: 'linear',
+                            position: 'bottom',
+                            min: minX - (minX*.25),
+                            max: maxX + maxX*.25,
+                            stepSize: maxX / 10,
+                        },
+                        y: {
+                            type: 'linear',
+                            position: 'left',
+                            min: minY - minY*.25,
+                            max: maxY + maxY*.25,
+                            stepSize: maxY / 10,
+                        }
+                    }
+                }
+            });
+        });
 
     </script>
 </body>
