--- a/sprint1.html
+++ b/sprint1.html
@@ -339,16 +339,29 @@
             let sortableArray = myArray.slice(1);
 
             // Sort the array based on the selected column and order
-            sortableArray.sort((a, b) => {
-                const itemA = a[sortIndex];
-                const itemB = b[sortIndex];
-                if (itemA < itemB) {
-                    return sortOrder === "asc" ? -1 : 1;
+                       sortableArray.sort((a, b) => {
+                const itemA = parseFloat(a[sortIndex]);
+                const itemB = parseFloat(b[sortIndex]);
+
+                if (isNaN(itemA) && isNaN(itemB)) {
+                    // Both values are not numbers, treat them as equal
+                    return 0;
+                } else if (isNaN(itemA)) {
+                    // itemA is not a number, place it after itemB
+                    return 1;
+                } else if (isNaN(itemB)) {
+                    // itemB is not a number, place it after itemA
+                    return -1;
+                } else {
+                    // Both values are numbers, perform numerical comparison
+                    if (itemA < itemB) {
+                        return sortOrder === "asc" ? -1 : 1;
+                    } else if (itemA > itemB) {
+                        return sortOrder === "asc" ? 1 : -1;
+                    } else {
+                        return 0;
+                    }
                 }
-                if (itemA > itemB) {
-                    return sortOrder === "asc" ? 1 : -1;
-                }
-                return 0;
             });
 
             // Reconstruct the original array with the sorted data
