--- a/sprint1.html
+++ b/sprint1.html
@@ -66,6 +66,7 @@
             /* Red */
         }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
