--- a/sprint1.html
+++ b/sprint1.html
@@ -65,6 +65,35 @@
             background-color: #FF0000;
             /* Red */
         }
+ /* Define CSS classes for the fading color scale */
+        .fading-color-scale-0 {
+            background-color: #FF0000;
+            /* Red */
+        }
+
+        .fading-color-scale-25 {
+            background-color: #FF8800;
+            /* Orange */
+        }
+
+        .fading-color-scale-50 {
+            background-color: #FFFF00;
+            /* Yellow */
+        }
+
+        .fading-color-scale-75 {
+            background-color: #88FF00;
+            /* Green-Yellow */
+        }
+
+        .fading-color-scale-100 {
+            background-color: #00FF00;
+            /* Green */
+        }
+
+        .white-outline {
+            border: 2px solid white;
+        }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
