--- a/sprint1.html
+++ b/sprint1.html
@@ -177,7 +177,7 @@
     </select>
 
     <!-- Button to trigger sort -->
-    <button id="btnSort" onclick="sortData()">Sort</button>
+    <button id="btnSort">Sort</button>
 
     <!-- Input field for the user to enter the number of rows to display -->
     <label for="topNInput">Enter the number of rows for input:</label>
