--- a/sprint1.html
+++ b/sprint1.html
@@ -378,8 +378,8 @@
             dropdown.disabled = false;  // Enable the dropdown
         }
 
-        //... existing code ...
-
+        
+        // Sort Button
         document.getElementById("btnSort").addEventListener('click', function () {
             // Get the selected column index from the dropdown
             const sortIndex = parseInt(document.getElementById("sortColumn").value);
